# bosch_project_demo_2

./: .gitignore  Dockerfile  README.md  mkdocs.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  train_and_cd.yml
configs/: ci.yaml  default.yaml
docs/: architecture.md  index.md  reproducibility.md
notebooks/: 01_training.ipynb
scripts/: download_data.py  generate_toy_dataset.py  predict_batch_from_manifest.py  predict_one.py
src/mmbiometric/: cli.py  cli_infer.py  cli_pipeline.py  cli_ray.py  config.py
src/mmbiometric/api/: api_app.py  app.py
src/mmbiometric/data/: dataset.py  manifest.py  split.py  transforms.py
src/mmbiometric/distributed/: ray_manifest.py  ray_train.py  ray_utils.py
src/mmbiometric/inference/: __init__.py  predict_batch_from_manifest.py  predict_one.py  predictor.py
src/mmbiometric/models/: backbones.py  multimodal_net.py
src/mmbiometric/training/: loops.py
src/mmbiometric/utils/: logging.py  seed.py
tests/: test_dataset.py  test_manifest_builder.py  test_model_forward.py
